<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">ZpSdk</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- sdk配置显示信息 -->
    <string name="info_network_loading">请求中，请稍等……</string>
    <string name="info_no_network">当前无网络，请稍候重试！</string>
    <string name="ok">确定</string>
    <!-- **************************裁剪图片相关⬇***************************** -->
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">确认</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">取消</string>
    <!-- **************************裁剪图片相关⬆*************************** -->
    <string name="dialog_text_delete_photo">删除图片</string>
    <string name="cancel">取消</string>
    <string name="title_activity_achieve_photo">AchievePhotoActivity</string>
    <string name="title_activity_a">AActivity</string>
    <string name="tv_share_product">分享这个产品</string>
    <string name="tv_shread_weixin">微信</string>
    <string name="tv_shread_qq">QQ</string>
    <string name="ic_share_qzone">QQ空间</string>
    <string name="ic_share_mail">Email</string>
    <string name="ic_weibo">新浪微博</string>
    <string name="tv_qq">QQ</string>
    <string name="tv_qzone">QQ空间</string>
    <string name="tv_weixin">微信朋友圈</string>
    <string name="tv_weChat">微信</string>
    <string name="tv_weibo">微博</string>
    <string name="edit_product">编辑产品</string>
    <string name="remove_product">删除产品</string>

</resources>