<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".ShareActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            style="@style/style7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:text="@string/tv_share_product" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ly_qq"
                style="@style/LinearLayout_shread_photo"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    style="@style/iv_qq"
                    android:background="@drawable/select_oval_white"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_share_qq" />

                <TextView
                    style="@style/text_14_shread_photo"
                    android:text="@string/tv_shread_qq" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_qzone"
                style="@style/LinearLayout_shread_photo"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    style="@style/iv_qq"
                    android:background="@drawable/select_oval_white"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_share_qzone" />

                <TextView
                    style="@style/text_14_shread_photo"
                    android:text="@string/ic_share_qzone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_email"
                style="@style/LinearLayout_shread_photo"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    style="@style/iv_qq"
                    android:background="@drawable/select_oval_white"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_share_mail" />

                <TextView
                    style="@style/text_14_shread_photo"
                    android:text="@string/ic_share_mail" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ly_wechat"
                style="@style/LinearLayout_shread_photo"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    style="@style/iv_qq"
                    android:background="@drawable/select_oval_white"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_share_wechat" />

                <TextView
                    style="@style/text_14_shread_photo"
                    android:text="@string/tv_shread_weixin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_moments"
                style="@style/LinearLayout_shread_photo"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    style="@style/iv_qq"
                    android:background="@drawable/select_oval_white"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_share_moments" />

                <TextView
                    style="@style/text_14_shread_photo"
                    android:text="@string/tv_weixin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_weibo"
                style="@style/LinearLayout_shread_photo"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    style="@style/iv_qq"
                    android:background="@drawable/select_oval_white"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_share_weibo" />

                <TextView
                    style="@style/text_14_shread_photo"
                    android:text="@string/ic_weibo" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout style="@style/lines_E7E7E7" />

        <LinearLayout
            android:id="@+id/ly_product"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_edit_product"
                style="@style/style2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/edit_product" />

            <TextView
                android:id="@+id/tv_delete_product"
                style="@style/style2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/remove_product" />
        </LinearLayout>

        <FrameLayout style="@style/lines_E7E7E7" />

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/style2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#1988db"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>